updated utils and notebooks

--- a/notebooks/vmaf_compare_implementations.ipynb
+++ b/notebooks/vmaf_compare_implementations.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import subprocess\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.rcParams['figure.dpi']=200\n",
@@ -24,7 +25,7 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "from vmaf_torch import VMAF, VMAF_C, yuv_to_tensor, tensor_to_yuv\n",
+    "from vmaf_torch import VMAF, yuv_to_tensor, tensor_to_yuv\n",
     "\n",
     "np.set_printoptions(precision=5, suppress=True)\n",
     "torch.set_printoptions(precision=5, sci_mode=False)"
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +116,57 @@
     "#vmaf_executable = 'vmaf.exe'  # windows\n",
     "vmaf_model_version = \"default\"\n",
     "#vmaf_model_version = \"NEG\"\n",
+    "\n",
+    "class VMAF_C():\n",
+    "    '''Utility class for calling reference vmaf executable'''\n",
+    "\n",
+    "    def __init__(self, vmaf_executable=\"vmaf\", vmaf_model_version=\"default\", verbose=True):\n",
+    "        self.vmaf_executable = vmaf_executable\n",
+    "        self.verbose = verbose\n",
+    "\n",
+    "        if vmaf_model_version == \"default\":\n",
+    "            self.vmaf_model_param = \"\"\n",
+    "        elif vmaf_model_version == \"NEG\":\n",
+    "            self.vmaf_model_param = \"--model version=vmaf_v0.6.1neg\"\n",
+    "\n",
+    "    def table_from_path(self, ref_path, dist_path, width, height, num_frames):\n",
+    "        vmaf_out_csv_path = 'vmaf_out.csv'\n",
+    "        vmaf_param = f\"{self.vmaf_executable} -r {ref_path} -d {dist_path} -w {width} -h {height} --frame_cnt {num_frames} -p 420 -b 8 --threads 16 -q --csv -o {vmaf_out_csv_path} {self.vmaf_model_param}\"\n",
+    "        if self.verbose:\n",
+    "            print('Executing:', vmaf_param)\n",
+    "        p = subprocess.run(vmaf_param.split(), stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "        if self.verbose:\n",
+    "            print('Reading:', vmaf_out_csv_path)\n",
+    "        df = pd.read_csv(vmaf_out_csv_path)\n",
+    "\n",
+    "        return df\n",
+    "\n",
+    "    def score_from_path(self, ref_path, dist_path, width, height, num_frames):\n",
+    "        df = self.table_from_path(ref_path, dist_path, width, height, num_frames)\n",
+    "        score = df['vmaf'].iloc[:num_frames].mean()\n",
+    "\n",
+    "        return score\n",
+    "\n",
+    "    def table_from_tensors(self, ref_tup, dist_tup):\n",
+    "        # TODO check shapes and rounding here\n",
+    "        ref_save_path = './ref.yuv'\n",
+    "        dist_save_path = './dist.yuv'\n",
+    "        width = ref_tup[0].shape[-1]\n",
+    "        height = ref_tup[0].shape[-2]\n",
+    "        num_frames = ref_tup[0].shape[0]\n",
+    "        if self.verbose:\n",
+    "            print('Saving tensors to:', ref_save_path, 'and', dist_save_path)\n",
+    "        tensor_to_yuv(*ref_tup, yuv_path=ref_save_path)\n",
+    "        tensor_to_yuv(*dist_tup, yuv_path=dist_save_path)\n",
+    "\n",
+    "        return self.table_from_path(ref_save_path, dist_save_path, width, height, num_frames)\n",
+    "\n",
+    "    def score_from_tensors(self, ref_tup, dist_tup):\n",
+    "        df = self.table_from_tensors(ref_tup, dist_tup)\n",
+    "        score = df['vmaf'].mean()\n",
+    "\n",
+    "        return score\n",
+    "\n",
     "vmaf_c = VMAF_C(vmaf_executable=vmaf_executable, vmaf_model_version=vmaf_model_version)  # wrapper class for vmaf executable"
    ]
   },
